// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render expenses summary correctly with multiple expenses 1`] = `
<div>
  <h1>
    You are Viewing 
    3
     
    expenses
     totalling 
    $450,123.00
  </h1>
</div>
`;

exports[`should render expenses summary correctly with one expense 1`] = `
<div>
  <h1>
    You are Viewing 
    1
     
    expense
     totalling 
    $0.00
  </h1>
</div>
`;
